--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <!--
   <parent>
-    <groupId>org.xwiki.contrib</groupId>
-    <artifactId></artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>org.xwiki.platform.applications</groupId>
+    <artifactId>xwiki-applications</artifactId>
+    <version>27</version>
   </parent>
-  -->
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>xwiki-skin-bootstrap</artifactId>
   <name>XWiki Contrib - Skin - Bootstrap</name>
