--- a/pom.xml
+++ b/pom.xml
@@ -8,24 +8,11 @@
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>xwiki-skin-lyrebird</artifactId>
-  <name>XWiki Contrib - Skin - Bootstrap</name>
+  <name>XWiki Contrib - Skin - Lyrebird - Parent POM</name>
   <version>1.0-SNAPSHOT</version>
-  <packaging>xar</packaging>
+  <packaging>pom</packaging>
   <description>An XWiki skin based on Twitter's bootstrap.css</description>
-  <build>
-    <extensions>
-      <extension>
-        <groupId>org.xwiki.platform.tools</groupId>
-        <artifactId>xwiki-xar-handlers</artifactId>
-        <version>${platform.tool.xar-handler.version}</version>
-      </extension>
-    </extensions>
-    <plugins>
-      <plugin>
-        <groupId>org.xwiki.platform.tools</groupId>
-        <artifactId>xwiki-xar-plugin</artifactId>
-        <version>${platform.tool.xar-plugin.version}</version>
-      </plugin>
-    </plugins>
-  </build>
+  <modules>
+    <module>xar</module>
+  </modules>
 </project>
