--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>xwiki-skin-lyrebird</artifactId>
   <name>XWiki Contrib - Skin - Lyrebird - Parent POM</name>
-  <version>0.9</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <description>An XWiki skin based on Twitter's bootstrap.css</description>
   <scm>
