--- a/xar/pom.xml
+++ b/xar/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.xwiki.contrib</groupId>
     <artifactId>xwiki-skin-lyrebird</artifactId>
-    <version>0.9</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>xwiki-skin-lyrebird-xar</artifactId>
   <name>XWiki Contrib - Skin - Lyrebird - XAR</name>
-  <version>0.9</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>xar</packaging>
   <build>
     <extensions>
